Convert to java 11, with major issues.