@@ -3,7 +3,8 @@ version = "0.3.3.3-alpha"
 // Set up javafx
 buildscript {
     dependencies {
-        classpath group: 'de.dynamicfiles.projects.gradle.plugins', name: 'javafx-gradle-plugin', version: '8.8.2'
+        classpath 'com.google.gradle:osdetector-gradle-plugin:1.6.0'
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0'
     }
 
     repositories {
@@ -14,7 +15,12 @@ buildscript {
 
 // apply plugins
 apply plugin: 'java'
-apply plugin: 'javafx-gradle-plugin'
+apply plugin: 'application'
+apply plugin: 'com.google.osdetector'
+
+ext.platform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'win' : osdetector.os
+
+mainClassName='com.creativeartie.writerstudio.main.Main'
 
 repositories {
     mavenLocal()
@@ -30,21 +36,6 @@ javadoc{
             into "build/docs/javadoc/"
         }
     }
-}
-
-jfx {
-    // minimal requirement for jfxJar-task
-    mainClass = 'com.creativeartie.writerstudio.main.Main'
-
-    // minimal requirement for jfxNative-task
-    vendor = 'CreativeArtie'
-    nativeReleaseVersion = "${version}"
-
-    bundleArguments = [
-        licenseFile: 'LICENSE.md'
-    ]
-
-    // runAppParameter = '--test=base'
 }
 
 compileJava {
@@ -65,15 +56,30 @@ dependencies {
     compile group: 'com.google.guava', name: 'guava', version: '23.5-jre'
     compile group: 'org.fxmisc.richtext', name: 'richtextfx', version: '0.9.0'
     compile group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.9'
+
+    compile "org.openjfx:javafx-base:11:$platform"
+    compile "org.openjfx:javafx-graphics:11:$platform"
+    compile "org.openjfx:javafx-controls:11:$platform"
+    compile "org.openjfx:javafx-web:11:$platform"
+}
+
+def currentOS = org.gradle.internal.os.OperatingSystem.current()
+def platform
+if (currentOS.isWindows()) {
+    platform = 'win'
+} else if (currentOS.isLinux()) {
+    platform = 'linux'
+} else if (currentOS.isMacOsX()) {
+    platform = 'mac'
 }
 
 test {
     // Enable JUnit 5 (Gradle 4.6+).
-    useJUnitPlatform(){
+    // useJUnitPlatform(){
         // "heavy" tests will take a long time to complete
         // "timed" tests requires exact timing, which possibly never happens
-        excludeTags "heavy", "timed"
-    }
+        // excludeTags "heavy", "timed"
+    // }
 
     enableAssertions = 'true'
 
@@ -91,7 +97,7 @@ task testAll(type: Test){
     group = 'Verification'
     description = 'Test all files, (take a lot longer then test)'
 
-    useJUnitPlatform()
+    // useJUnitPlatform()
 
     // Always run tests, even when nothing changed.
     dependsOn 'cleanTest'
@@ -109,3 +115,20 @@ task testAll(type: Test){
 
 }
 
+compileJava {
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls'
+        ]
+    }
+}
+
+run {
+    doFirst {
+        jvmArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls'
+        ]
+    }
+}
